Table users as u {
  id int [pk, increment]
  username varchar
  email varchar 
  
}

Table student_profile {
  id int [pk, increment]
  user FK
  course FK
  university FK
  major FK
}

Ref: u.id - student_profile.user

Table university {
  id int [pk, increment]
  name varchar
}

Table course {
  id int [pk, increment]
  course_code varchar
  course_name varchar
}

Table semester {
  id int [pk, increment]
  year int
  index choice(1,2,3)
  start_date datetime
  end_date datetime
  is_past boolean
  is_active boolean
}

Table unit {
  name varchar
  unit_code varchar [pk]
  unitguideurl url
  description TextField
  created_date datetime
  created_by FK_User
}

Table enrollments {
  id int [pk, increment]
  user FK_user
  unit FK_Unit
  semester FK_Semester
  passed boolean
}

Ref: "enrollments"."user" > "u"."id"

Ref: "enrollments"."unit" > "unit"."unit_code"

Ref: "enrollments"."semester" > "semester"."id"

Table assignment {
  id int [pk, increment]
  unit FK_Unit
  created_by FK_User
  weighting_text varchar
  weighting_number float
  total_marks_available int
  title varchar
  description varchar
  due_date datetime
  due_week_text varchar
  due_week_number int
  status choice(unpublished, open, closed, graded)
  marks int [note: 'marks awarded']
  task_type varchar
}

Ref: "unit"."unit_code" < "assignment"."unit"

Ref: "users"."id" < "assignment"."created_by"

Ref: "university"."id" < "student_profile"."university"

Ref: "course"."id" < "student_profile"."course"

Table major_sequences {
  id int [pk, increment]
  title varchar
  course FK_course
  unit_set_code varchar
}

Table minor_sequences {
  id int [pk, increment]  
  title varchar
  course FK_course
  unit_set_code varchar
}

Table core_sqeuences {
  id int [pk, increment]
  course FK_course [note: 'one-to-one relationship between core_sequence units and course']
}

Table unitset {
  id int [pk, increment, note: 'This table resolves the many to many relationships between the sequences and units']
  unit FK_Unit 
  major_sequence FK_major
  minor_sequence FK_minor
  core_sequence FK_core
  
}

Table UnitAvailability {
  id int [pk, increment]
  unit FK_Unit
  semester FK_Semester
  cloud boolean
  burwood boolean
  geelong boolean
}

Table UnitData {
  unit FK_Unit
  unitguide_url url
  raw_data json
  created_date datetime
  created_by datetime
  
  year int
  credit_points float
  eftsl_value float
  incompatible_units_text varchar
  prerequisite_units_text varchar
  corequisite_units_text varchar
  assignments_json json
  hurdle_text varchar
  
  trimesters_available FK_UnitAvailability
}




Ref: "course"."id" < "major_sequences"."course"

Ref: "core_sqeuences"."course" - "course"."id"

Ref: "minor_sequences"."course" > "course"."id"




Ref: "core_sqeuences"."id" < "unitset"."core_sequence"

Ref: "major_sequences"."id" < "unitset"."major_sequence"

Ref: "minor_sequences"."id" < "unitset"."minor_sequence"

Ref: "unit"."unit_code" < "unitset"."unit"

Ref: "student_profile"."major" > "major_sequences"."id"

Ref: "UnitAvailability"."unit" < "unit"."unit_code"

Ref: "UnitData"."unit" > "unit"."unit_code"

